[package]
name = "rocks-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
snarkvm = { path = "../snarkVM", features = ["rocks"] }
tikv-jemallocator = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.aleo-std-storage]
version = "0.1.7"
default-features = false

[dependencies.tokio]
version = "1.28"
features = ["macros", "rt-multi-thread", "signal"]
